fix: chancge styles for button and change structure section mobile

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,11 @@
 $main-color: #1eacc7
 $second-color: #ff5656
 
+=btn_hover
+	&:hover
+		background-image: none
+		background-color: $main-color
+
 *
 	font-family: 'Roboto', sans-serif
 header
@@ -18,99 +23,102 @@ nav
 	padding: 13px 70px
 	margin: 0
 	list-style: none
-.menu_link
-	font-weight: 300
-	font-size: 15px
-	color: #fff
-.menu_item
-	border-right: 2px dotted #000
-	padding-right: 48px
+	&_link
+		font-weight: 300
+		font-size: 15px
+		color: #fff
+	&_item
+		border-right: 2px dotted #000
+		padding-right: 48px
 .subheader
 	position: absolute
 	width: 100%
 	top: 50px
 	height: 84px
 	background-color: rgba(0, 0, 0, .6)
-.subheader_logo
-	max-width: 100%
-	img
-		margin-top: 20px
-.subheader_official
-	font-size: 13px
-	font-weight: 400
-	color: #fff
-	opacity: 0.5
-.subheader_call
-	margin-top: 19px
-	font-size: 12px
-	font-weight: 300
-	color: #fff
-	text-align: right
-.subheader_phone
-	display: block
-	margin-top: 8px
-	color: #fff
-	font-size: 22px
-	font-weight: 400
-	text-transform: uppercase
-	text-align: right
-	line-height: 12px
-.subheader_btn
-	width: 170px
-	height: 46px
-	margin-top: 19px
-	font-size: 14px
-	font-weight: 400
-	box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
-	border: none
-	border-radius: 4px
-	background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
-	color: #fff
-	text-transform: uppercase
+	&_logo
+		max-width: 100%
+		img
+			margin-top: 20px
+	&_official
+		font-size: 13px
+		font-weight: 400
+		color: #fff
+		opacity: 0.5
+	&_call
+		margin-top: 19px
+		font-size: 12px
+		font-weight: 300
+		color: #fff
+		text-align: right
+	&_phone
+		display: block
+		margin-top: 8px
+		color: #fff
+		font-size: 22px
+		font-weight: 400
+		text-transform: uppercase
+		text-align: right
+		line-height: 12px
+	&_btn
+		width: 170px
+		height: 46px
+		margin-top: 19px
+		font-size: 14px
+		font-weight: 400
+		box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
+		border: none
+		border-radius: 4px
+		background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
+		color: #fff
+		text-transform: uppercase
+		+btn_hover
+
 .promo
 	min-height: 800px
 	padding: 150px 0 135px
 	background: url('../../../assets/img/uber_bg.png') center center/cover no-repeat
-.promo_header
-	margin: 0
-	font-size: 60px
-	font-weight: 700
-	color: #fff
-	line-height: 60px
-	text-align: center
-.promo_subheader
-	margin: 22px 0 0
-	font-size: 36px
-	font-weight: 700
-	color: #fff
-	line-height: 36px
-	text-align: center
-.promo_descr
-	margin-top: 23px
-	font-size: 18px
-	font-weight: 400
-	color: #fff
-	line-height: 24px
-	text-align: center
-.promo_btn
-	display: block
-	margin: 118px auto 0
-	width: 259px
-	height: 63px
-	font-size: 18px
-	font-weight: 400
-	color: #fff
-	border-radius: 4px
-	box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12)
-	background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
+	&_header
+		margin: 0
+		font-size: 60px
+		font-weight: 700
+		color: #fff
+		line-height: 60px
+		text-align: center
+	&_subheader
+		margin: 22px 0 0
+		font-size: 36px
+		font-weight: 700
+		color: #fff
+		line-height: 36px
+		text-align: center
+	&_descr
+		margin-top: 23px
+		font-size: 18px
+		font-weight: 400
+		color: #fff
+		line-height: 24px
+		text-align: center
+	&_btn
+		display: block
+		margin: 118px auto 0
+		width: 259px
+		height: 63px
+		font-size: 18px
+		font-weight: 400
+		color: #fff
+		border-radius: 4px
+		box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12)
+		background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
+		+btn_hover
 .reasons
 	padding: 71px 0 65px 0
-	.reasons_block
+	&_block
 		display: flex
 		justify-content: center
 		align-items: center
 		margin-top: 35px
-		.reasons_round
+		&_round
 			display: flex
 			justify-content: center
 			align-items: center
@@ -119,14 +127,14 @@ nav
 			height: 113px
 			background-color: #1eacc7
 			border-radius: 100%
-		.reasons_descr
+		&_descr
 			width: 343px
-			.reasons_subtitle
+			&_subtitle
 				line-height: 21px
 				color: #1eacc7
 				font-size: 17px
 				font-weight: 400
-			.reasons_text
+			&_text
 				color: #202020
 				font-size: 15px
 				font-weight: 300
@@ -214,6 +222,27 @@ nav
 			margin: 0 auto
 			border-radius: 100%
 			cursor: pointer
+			&::before
+				content: ''
+				display: block
+				width: 14px
+				height: 2px
+				background-color: $main-color
+				transition: all 0.3s
+			&::after
+				content: ''
+				position: absolute
+				left: 50%
+				transform: translateX(-50%)
+				display: block
+				height: 14px
+				width: 2px
+				background-color: $main-color
+				transition: all 0.3s
+			&:hover
+				&::before, &::after
+					background-color: $second-color
+
 .choice
 	position: relative
 	min-height: 895px
